2015-09-09  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (process_command_apdu): Protect command execution
	against cancelling the execution thread.
	(cmd_pso, cmd_internal_authenticate): Allow cancellation.
	* src/openpgp-do.c (gpg_do_keygen): Allow cancellation.

	* src/main.c (main): Handle LED_USB_RESET.

	* src/usb-icc.c (ccid_usb_reset): New.
	(ccid_thread): Upon receival of EV_USB_RESET, finish
	the thread, canceling the card thread.

2015-09-08  Niibe Yutaka  <gniibe@fsij.org>

	* src/gnuk.h (EV_USB_RESET, LED_USB_RESET): New.

	* src/usb_ctrl.c (CDC_CTRL_DTR): New.
	(vcom_port_data_setup): Distinguish detail->value for DTR.

	* src/configure (help): Add ST_DONGLE and ST_NUCLEO_F103.

2015-09-04  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (do_openpgpcard_aid): Use upper bytes of unique
	ID of MCU; same as USB serial number.

	* src/configure (help): Add NITROKEY_START.a

2015-08-26  Mateusz Zalega  <mateusz@nitrokey.com>

	* GNUK_USB_DEVICE_ID: Add Nitrokey Start.

2015-08-05  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.1.7.

2015-08-04  Niibe Yutaka  <gniibe@fsij.org>

	* src/adc_stm32f103.c: Update from NeuG 1.0.3.

	* chopstx: Update to 0.08.
	* src/sys.h: Update.

2015-08-03  Niibe Yutaka  <gniibe@fsij.org>

	* test/features/steps.py (set_msg): Python3 fix.
	* test/generate_keys.py: Likewise.
	* test/rsa_keys.py: Likewise.

	* tool/gnuk_token.py (gnuk_token.download, gnuk_token.execute)
	(regnual.download): Python3 fix.
	(list_to_string): Remove.

	* tool/upgrade_by_passwd.py (maian): Python3 fix.
	* tool/usb_strings.py (main): Python3 fix.

2015-07-31  Niibe Yutaka  <gniibe@fsij.org>

	* src/configure (output_vendor_product_serial_strings): Fix sed
	script when string is short.  Remove empty line.

	* regnual/regnual.c (usb_cb_ctrl_write_finish, usb_cb_setup)
	(usb_cb_get_descriptor, usb_cb_interface): Follow the change
	of USB API.

	* tool/stlinkv2.py: Support ST-Link/V2-1.

2015-07-28  Niibe Yutaka  <gniibe@fsij.org>
